CHANGES IN VERSION 1.9.0 (devel)
 -----------------------
 Default addition of chain where it is absent.


CHANGES IN VERSION 1.1.1 (devel)
-----------------------

FEATURES
    o New function called draw_folding(). This function allows the drawing
    of the STRAND, HELIX and TURN types which denote regions of the proteins
    that assemble as beta-strands, alpha helicies or make a turn in the 3D
    structure of the protein.
    o New function called parse_gff(). This function imports files or urls
    that link to a GFF3 format and parses the data to allow it to be plotted.


CHANGES IN VERSION 0.99.10
-----------------------

ARGUMENT
    o show.legend added as argument to allow the option to show or not show
    the legend as per ggplot2.


CHANGES IN VERSION 0.99.9
-----------------------

FEATURES
    o New function called draw_recept_dom(). This function allows the drawing
    of the TOPO_DOM and TRANSMEM types of receptors. Data from TNFR1 and CD40
    are included to demonstate the function.


CHANGES IN VERSION 0.99.8
-----------------------

FEATURES
    o New function called extact_transcripts. This function will ammend the
    data frame to allow each chain from the same UniProt accession number to
    to drawn separately. A vignette entitled drawProteins_extract_transcripts
    has been written to demonstrate.
    o LazyData is now false and NAMESPACE updated as per Bioconductor review.


CHANGES IN VERSION 0.98.3
-----------------------

FEATURES

    o New function called draw_canvas. This function was previously within
    draw_chains but has now been pulled out to allow the generation of a canvas
    separately from the chains. It did require quite a rewrite but I think
    it will make things more useful For example, it will allow the plotting of
    domains without chains which has the potential to be very useful.

CHANGES IN VERSION 0.98.2
-----------------------

FEATURES
